--- a/references.bib
+++ b/references.bib
@@ -346,3 +346,15 @@
   year={2011},
   publisher={Guilford Press}
 }
+
+% ML
+
+@article{ullah2020applications,
+  title={Applications of artificial intelligence and machine learning in smart cities},
+  author={Ullah, Zaib and Al-Turjman, Fadi and Mostarda, Leonardo and Gagliardi, Roberto},
+  journal={Computer Communications},
+  volume={154},
+  pages={313--323},
+  year={2020},
+  publisher={Elsevier}
+}
