Spatial autocorrelation handling

--- a/chapter5.tex
+++ b/chapter5.tex
@@ -1,5 +1,6 @@
 \chapter{Preparation of Datasets}
 \label{chap:preparations data sets}
+% Todo: 6 pages?
 
 goals:
 - dataset to train and validate different types of regression models
