--- a/references.bib
+++ b/references.bib
@@ -312,6 +312,28 @@
 
 % Correlation meteological influences
 
+@article{moran1948interpretation,
+  title={The interpretation of statistical maps},
+  author={Moran, Patrick AP},
+  journal={Journal of the Royal Statistical Society. Series B (Methodological)},
+  volume={10},
+  number={2},
+  pages={243--251},
+  year={1948},
+  publisher={JSTOR}
+}
+
+@article{geary1954contiguity,
+  title={The contiguity ratio and statistical mapping},
+  author={Geary, Robert C},
+  journal={The incorporated statistician},
+  volume={5},
+  number={3},
+  pages={115--146},
+  year={1954},
+  publisher={JSTOR}
+}
+
 @article{tai2010correlations,
   title={Correlations between fine particulate matter (PM2. 5) and meteorological variables in the United States: Implications for the sensitivity of PM2. 5 to climate change},
   author={Tai, Amos PK and Mickley, Loretta J and Jacob, Daniel J},
@@ -356,5 +378,25 @@
   volume={154},
   pages={313--323},
   year={2020},
+  publisher={Elsevier}
+}
+
+@misc{openai2023gpt4,
+      title={GPT-4 Technical Report}, 
+      author={OpenAI},
+      year={2023},
+      eprint={2303.08774},
+      archivePrefix={arXiv},
+      primaryClass={cs.CL}
+}
+
+@article{hornik1989multilayer,
+  title={Multilayer feedforward networks are universal approximators},
+  author={Hornik, Kurt and Stinchcombe, Maxwell and White, Halbert},
+  journal={Neural networks},
+  volume={2},
+  number={5},
+  pages={359--366},
+  year={1989},
   publisher={Elsevier}
 }
