--- a/chapter4.tex
+++ b/chapter4.tex
@@ -1,38 +1,47 @@
 \chapter{Machine Learning Model Design}
 \label{chap:Machine Learning Model Design}
+% 10 pages?
 
-The data-layer exposes a variety of single data-points for different points in time. As meteorological research and analysis activities are usually in need of gridded or continuous data \cite{sekulic2020spatio}, in this paper we design a temperature interpolation service that offers continuous air temperature data for a given area. This service is part of the \textit{service-layer} and acts as a building block for further temperature related research and analysis, as air temperature is an important variable for research in agronomy, meteorology, hydrology, ecology and many other fields of application.\\
-The core of this service is a deployable ML regression model, that is capable of interpolating missing data points for a target feature in a defined area, based on surrounding data points, that contain various features that are related to the target feature. In the case of temperature interpolation, the target feature is the air temperature and the related features could be surrounding air temperature, rain, humidity, solar radiation or wind, which can be collected using weather stations and specialized sensors. Other features in the context of temperature prediction could also be geological data such as  Normalized Difference Vegetation Index (NDVI) or Modified Normalized Difference Water Index (MNDWI) which, according to \cite{alonso2020new}, have a strong impact on their estimation model.\\
-The hypothesis of this work is that ML regression models perform better than traditional geostatistical methods when it comes to interpolating missing data points in a highly dynamic environment, such as an urban city, as they these models are able to learn data patterns and feature dependencies as well as being more flexible in terms of the number of features that can be used for prediction. Additionally, ML models could reduce the effort it takes to configure a geostaticial model by automatically selecting the most important features and optimizing the hyperparameters based on the urban environment.
+In recent times, the area of machine learning has seen big advancements in terms of model size and complexity. Especially in the area of generative AI, e.g. text and image generation, models such as OpenAI's ChatGPT~\cite{openai2023gpt4} have generated significant hype for the possiblity of use of AI. As a result, the question arises what benefits AI can bring to other areas of application, such as sensing applications in the context of smart cities. In this chapter, we will discuss the usage of AI in the context of smart city, more precisely in the context of data enrichment via interpolation, and outline possible advantages and disadvantages compared to traditional (geo-) statistical methods.\\
+First of all, we need to clarify what is meant by artificial intelligence (AI), machine learning (ML) and deep learning (DL). AI is a broad term that is used to describe the ability to perform tasks, that are usually associated with human intelligence. ML is a subfield of AI, that focuses on the ability of a system to learn from data without being explicitly programmed to do so. Finally, DL is a subfield of ML, that uses artificial neural networks, which imitate the structure of the human brain, to learn from data and perform various tasks.\\
+In this work, we will focus primarely on DL models, as these offer the possibility to learn complex patterns and dependencies, which could be beneficial in the complex context of smart city and temperature interpolation. The universal approximation theorem states, that a feedforward network with a single hidden layer containing a finite number of neurons can approximate any continous function~\cite{hornik1989multilayer}. This statement emphasizes the power of DL models. However, it does not state how many neurons are needed to approximate the function and gives no indication on how to train the network. In practice there is lot of trial and error involved when designing DL models.\\
+Additionally, we will also take a brief look on traditional ML models, such as linear regression models, as these are usually very easy to implement and can be used as another baseline for comparison, which trade speed of setup and execution against complexity and potentially less accuracy.\\
+\\
+In the following, we will first discuss fundamental model assumptions given by the data layer. Afterwards, we will discuss the potential design of a ML model for temperature interpolation, including the architecture as well as potential input features and possible pre-processing steps. The model is then implemented and later evaluated in chapter \ref{chap:Evaluation}.
 
-\section{Geostatical Interpolation Baseline}
-In order to evaluate the performance of the ML model, we need to first get a better understanding of the interpolation quality of existing interpolation techniques. Next to simpler deterministic interpolation methods, such as inverse weight distance (IWD) or k-nearest neighbours (KNN) that are easy and performant, but struggle to capture more complex interdependencies, there are also more complex methods available. The most common geostatistical method for interpolation is Krigin, which is based on a gaussian process and uses a covariance function to model the spatial correlation between data points. The covariance function is a measure of the similarity between two data points, which is used to calculate the weight of the data point in the interpolation process. There are different types of Krigin methods available, each suited for different use cases, including:
+% Goal of this chapter
 
-\begin{enumerate}
-    \item Simple Krigin: the simplest form of Krigin, that assumes that the mean of the measured values is known and constant
-    \item Ordinary Krigin: same as Simple Krigin, but the mean is an unknown constant
-    \item Universal Krigin: instead of assuming a constant mean, the mean is modeled as a deterministic function
-    \item Indicator Krigin: same as Ordinary Krigin, but for categorical data
-    \item Propability Krigin: same as Indicator Krigin, but assumes two types of random errors that can are each auto-correlated and cross-correlated to each other
-    \item Disjunctive Krigin: same as Ordinary Krigin, but tries to improve the prediction quality by using an unknown constant and approximating an arbitrary function. It requires the bivariate normality assumption and is difficult to verify and solutions might be mathematically and computationally complicated
-    \item Cokrigin: offers methods for the previous Krigin methods, but uses information on several variable types. This could improve the prediction quality, but might increase the variance of the prediction, as more much more estimation is required
-\end{enumerate}
+\section{Model Assumptions from the Data Layer}
 
-In the context of geostatistical analysis, there are different types of Krigin methods available that combine the aforementioned methods with other techniques, such as regression analysis. The following list is the geostaticial methods offered by ArcGIS Pro as part of the Geostatical Analyst toolbox~\footnote{\url{https://pro.arcgis.com/en/pro-app/latest/tool-reference/geostatistical-analyst/an-overview-of-the-geostatistical-analyst-toolbox.htm}}:
+The data-layer exposes a variety of single data-points for various features for different locations for current and past points in time. As meteorological research and analysis activities are usually in need of gridded or continuous data \cite{sekulic2020spatio}, the goal of this chapter is to design a model that is capable of turning these single data-points into a gridded data layer of air temperature where each cell has a specific air temperature value. Features other than air temperature could further improve the predecition quality, like how \cite{alonso2020new} suggests that in their study the Normalized Difference Vegetation Index (NDVI) and Modified Normalized Difference Water Index (MNDWI) have a strong impact on their estimation model. Therefore, we discuss how additional features can be included in the model.\\
+This model should then be deloyed inside the \textit{service-layer} and act as a building block for further temperature related research and analysis, as air temperature is an important variable for research in agronomy, meteorology, hydrology, ecology and many other fields of application and could be used for UHI detection in the context of smart cities. The general idea and architecture behind the model should not only be applicable for air temperature, but also other types of output features.
 
-% TODO: add more details for each method
-\begin{enumerate}
-    \item Empirical Bayesian Krigin (EBK)
-    \item Empircal Bayesian Krigin 3D (EBK3D)
-    \item EBK Regression Prediction (EBKRP): Empirical Bayesian Kriging with regression prediction
-    \item Global Polynominal Interpolation
-    \item Kernel Interpolation with Barriers
-    \item Moving Window Krigin
-    \item Radial Basis Function
-\end{enumerate}
+% TODO: summary of the assumptions for the geolocation data
 
-In the scope of this work, we unfortunately cannot compare all of these methods with each other and therefore need to focus on a subset of methods. EBK and EBKRP are one of the most commonly used methods for temperature interpolation (cite). According to \cite{njoku2023effects}, EBKRP continously outperforms EBK in different weather station density scenarios, therefore we will use EBKRP as a baseline for our comparison.\\
-In the following, the machine learning fundamentals for this work are explained and the different ML regression model types are introduced.
+\subsection{Incorporating Geolocation Data}
+
+As discussed in chapter \ref{chap:Related Work}, there is a dependency between air temperature and other meteological features and the location of the sensors. The closer a sensor is to another sensor, the more correlated the sensor readings should be.
+In geo-statistics, this is called spatial autocorrelation and can be defined traditionally with the Moran's I index~\cite{moran1948interpretation} or the Geary's coefficient~\cite{geary1954contiguity}.
+% TODO: explain autocorrelation and the implications for ML models
+% model assumptions: no ML algorithm that expects independence between observations
+% feature selection: including all correlated features can lead to overfitting
+% spatial feature engineering: add additional features that encode the spatial relationship between sensors
+% spatial smoothing:
+% spatial aware algorithms: geographically weighted regression (GWR) 
+
+This relationship is however greatly influenced by the type of feature and the location of a sensor. As explained in \cite{oke2006guideline}, the sensor placement in the urban environment is a complex task, as the urban environment is highly dynamic and sensors can be influenced by highly local phenomena, such as air temperarture by heat vents or solar radiation by buildings and surface materials. For this model, we assume that the sensors are placed in a way that the sensor readings are representative for the area they are placed in, even tho in practice this assumption might not hold up, especially for sensors placed by non-experts.\\
+Each sensor reading from the data-layer has a location associated with it in the form of longitute, latitude and altitude (if available). This information can be used to calculate the distance between sensors and subsequently the correlation between sensor readings. However, how exactly the distance between two locations is calculated is not trivial. As the earth is a sphere, the distance between two points on the surface is not a straight line. Depending on the application, different distance metrics can be used. For a small area, such as the city of Hamburg, the euclidean distance could be sufficient, as the curvature of the earth for a small distance is negligible. However, for larger areas the geodesic (harvesine) distance might be more appropriate. In this work, we are focussing on a single city including it's surrounding area, therefore the euclidean distance should have a sufficient accuracy while also simplifing the calculation. As the city of Hamburg does not have big differences in elevation, the altitude is not considered in the distance calculation.\\
+% grid area -> each data point is in a grid cell. Multiple data points can be in the same grid cell. If this is the case, the readings are averaged. Outliers based on the overall mean temperature are removed. -> this is done in the data layer
+The location data can be incorporated into the input data in several ways. The most straight forward way would be to just include the longitude and latitude as input features. Depending on the type of model used, these values might need to be normalised. For example, tree-based models do not require normalisation (cite), as they are not sensitive to the scale of the input features. However, neural networks are very sensitive to the scale of the input features and therefore require normalisation (cite). This approach has the downside, that the distance between sensors is not directly encoded in the input data. If this information is important for the model, it could be included by precalculating the distances between all sensors, however this would increase the complexity of the model especially for large amounts of sensors, as this would result in a quadratic number of input features.\\
+The next approach would be to convert the 
+
+- area n x m grid of data points, each grid cell with n x n size (depending on the resulution), 4D space with location as x and y coordinates (euclidean distance -> but only for smaller areas such as city of Hamburg and suroundings), time as z coordinate and feature values as w coordinate.\\
+
+% Timeseries handling
+
+
+
+
 
 \section{Supervised Learning}
 There are multiple learning approaches when it comes to machine learning, especially in the context of smart cities. The main directions are supervised learning, with classification and regression, unsupervised learning with clustering and dimensionaly reduction, and reinforcement learning~\cite{ullah2020applications}. As interpolation of missing data is a form of regression, in this study we use a supervised regression approach to train our ML models.\\
@@ -95,3 +104,39 @@ Need to retrain model from time to time, e.g. if the accurracy drops below a cer
 % Implementation details
 - dealing with coordinate systems:
     - projected coordinate system (e.g. UTM) instead of long lat alt values (important for interpolation)
+
+\section{Machine Learning in Geostatistics}
+
+Idea/Hyphothesis: ML outperforms traditional geostatistical models (in certain scenarios) as it is able to capture more complex interdependencies between features and isn't necessarily bound to the (mathematical) assumptions of geostatistical models.
+
+On important point to mention, is that different meteological features have different interpolation techniques, as they beve different (physical) properties. For example, temperature is a scalar value, while wind speed and direction are vector values. Relative humidity on the other hand is a relativ value that is bound between 0 and 1. For percipitation it gets even more complex, as rainfall is highly connected to cloud coverage and movements. In the following, we will take a look at commonly used existing interpolation techniques for different meteological features and discuss data preprocessing steps.
+
+- Dealing with sparse data
+- Dealing with extreme weather events (e.g. heat waves, blizzards, etc.)
+- how can a ML model be trained if no such data exists for a given area? -> transfer learning
+
+\subsection{Temperature Interpolation}
+- difference between air and surface temperature
+
+surface temperature -> solar radiation, surface roughness, emissivity, soil moisture, soil temperature, vegetation cover, snow cover, and surface slope
+
+air temperature -> surface temperature
+
+\subsection{Wind Speed and Direction Interpolation}
+prob not easily archivable with ML -> depends on high/low pressure areas
+
+\subsection{Relative Humidity Interpolation}
+Data preprocessing: scale to [0, 1]
+does not seem to work well with kriging, maybe just nearest neighbor approach/linear, or the input values are just not accurate
+
+\subsection{Percipitation Interpolation}
+
+
+
+DeepLearning Lecture
+- sequence modeling design criteria
+    - handle variable-length sequences
+    - track long term dependencies
+    - maintain information about order
+    - share parameters across the sequence
+
